# FAR-plugins

./: README.md
Common/far-hardware-viewer/: CMakeLists.txt  build.sh
Common/far-hardware-viewer/src/: Amd64ViewerEng.hlf  Amd64ViewerEng.lng  Amd64ViewerRus.hlf  Amd64ViewerRus.lng  config.ini  linux_backend.cpp  plugin_core.cpp  plugin_core.hpp  simd_amd64.asm  win32_backend.cpp
Common/fastcopy-plugin/: CMakeLists.txt  bridge.h  build_all.sh  build_system.sh  fastcopy_core.cpp  plugin.cpp  plugin.def  readme.md
Common/fastcopy-plugin/src/: core.h  linux_impl.cpp  main.cpp  win32_impl.cpp
FarLinuxReader/: build_MSYS2.sh
FarLinuxReader/src/: LinuxReaderFsParsers.cpp  LinuxReaderIo.hpp  Obfuscation.hpp  readme.md
Windows/FarLinuxReader/: LinuxFsNetwork.cpp  LinuxFsNetwork.hpp  LinuxReaderCore.hpp  LinuxReaderFsParsers.cpp  LinuxReaderFsSpecs.hpp  LinuxReaderIo.cpp  LinuxReaderIo.hpp  Makefile  Plugin.cpp  Resource.rc  build_MSYS2.sh  fetch_dependencies.sh  linux_fs_readerEng.hlf  linux_fs_readerEng.lng  linux_fs_readerRus.hlf  linux_fs_readerRus.lng  readme.md
Windows/FarLinuxReader/src/: GpuEngine.cpp  LinuxFsNetwork.cpp  LinuxFsNetwork.hpp  LinuxReaderCore.hpp  LinuxReaderIo.cpp  Plugin.cpp
